--- a/route.html
+++ b/route.html
@@ -6,6 +6,6 @@
     <title>TrackMate</title>
 </head>
 <body>
-    <a class="routeToTrackMateOfficialWebsite" href="/index.html" target="_blank">Head towards the progress!</a>
+    <a class="routeToTrackMateOfficialWebsite" href="./client-side/index.html" target="_blank">Head towards the progress!</a>
 </body>
 </html>
