--- a/client-side/index.html
+++ b/client-side/index.html
@@ -8,14 +8,17 @@
 </head>
 
 <body>
-    <h1>TrackMate</h1>
-    <h5>Which platform do you want to track your mates around?</h5>
+    <h1 style="text-align: center;">TrackMate</h1>
+    <h3>Which platform do you want to track your mates around?</h3>
+    <p>PS: Wait for 5 sec after clicking the button. It takes time to fetch the data.</p>
     <div class="options">
         <button id="codechefButton">CodeChef</button>
         <button id="leetcodeButton">Leetcode</button>
         <button id="gfgButton">GeeksForGeeks</button>
 
-        <div id="dataContainer"></div>
+        <div id="codechefContainer"></div>
+        <div id="leetcodeContainer"></div>
+        <div id="gfgContainer"></div>
     </div>
     <script src="fetchdata.js"></script>
 </body>
