--- a/client-side/index.html
+++ b/client-side/index.html
@@ -10,7 +10,7 @@
 <body>
     <h1 style="text-align: center;">TrackMate</h1>
     <h5 style="text-align: center;">Disclaimer: This site is only for author's personal learning objectives only. The
-        author has no intention to harm any one. Remember author is a newbie learning new things. Pls support him.</h5>
+        author has no intention to harm any person or organisation. Remember author is a newbie learning new things. Pls support him.</h5>
     <h3>Which platform do you want to track your mates around?</h3>
     <p>PS: Wait for 5 sec after clicking the button. It takes time to fetch the data.</p>
     <div class="options">
@@ -34,7 +34,6 @@
     </div>
     <script src="fetchdata.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
-    <script src="chart1.js"></script>
 </body>
 
 </html>
